--- a/Profile/LK/templates/lk/create_order.html
+++ b/Profile/LK/templates/lk/create_order.html
@@ -4,6 +4,24 @@
 {%endblock%}
 {%block content%}
 
+<style>
+.btn-primary{
+	background-color: #5867dd;
+	border-color: #4857d0;
+	color:#fff
+}
+
+caption button.btn-default{
+	background-color: #5867dd;
+	border-color: #4857d0;
+	margin-right:5px;
+	color:#FFF;
+}
+.btn-primary:hover, .btn-primary:active, .btn-primary.hover, caption button.btn-default:hover{
+	background-color: #6a79ee;
+	border-color: #01549b
+</style>
+
 <div class="content-wrapper">
     <div class="content-header sty-one">
       <h1 class="text-black">Заказы</h1>
