--- a/Profile/templates/inc/_nav.html
+++ b/Profile/templates/inc/_nav.html
@@ -14,7 +14,7 @@
     <span class="logo-mini"><img src="{{MEDIA_URL}}/logo/logo_mini.png" alt="" style="height:50px;width:50px"></span>
     <!-- logo for regular state and mobile devices -->
     <!--<span class="logo-lg"><img src="https://sun9-68.userapi.com/impg/iSkLqH8UJIa1ePW8z30Yip_TzlSmfqpHSmG13w/ll13fNmj8Tc.jpg?size=1010x416&quality=96&sign=0aabf30bc0683970ccc33103e2047a11&type=album" alt="" style="height:55px;width:200px"></span> </a>-->
-    <span class="logo-lg"><img src="{{MEDIA_URL}}/logo/logo.png" alt="" style="height:60px;width:170px"></span> </a>
+    <span class="logo-lg"><img src="{{MEDIA_URL}}/logo/logo_back_free.png" alt="" style="height:60px;width:160px"></span> </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar blue-bg navbar-static-top">
       <!-- Sidebar toggle button-->
