--- a/Profile/LK/templates/lk/profile.html
+++ b/Profile/LK/templates/lk/profile.html
@@ -25,17 +25,18 @@
           </div>
           <div class="info-box">
             <div class="box-body"> <strong><i class="fa fa-book margin-r-5"></i> Пояс</strong>
-
-                {%if cert.belt%}
-              <p class="text-muted"> {{cert.belt}} </p>
+                {%for objects in cert%}
+                {%if objects.belt%}
+              <p class="text-muted"> {{objects.belt}} </p>
                 {%else%}
               <p class="text-muted"> Не имеет </p>
                 {%endif%}
+                {%endfor%}
               <hr>
               <strong><i class="fa fa-map-marker margin-r-5"></i> Филиал</strong>
-
-              <p class="text-muted">{{filial.title}}</p>
-
+                {%for obj in filial%}
+              <p class="text-muted">{{obj.title}}</p>
+                {%endfor%}
               <hr>
               <strong><i class="fa fa-envelope margin-r-5"></i> Email</strong>
               <p class="text-muted">{{user.email}}</p>
@@ -63,7 +64,7 @@
                 <div class="tab-pane" id="profile" role="tabpanel" aria-expanded="false">
                   <div class="card-body">
                     <div class="row">
-                      <div class="col-lg-3 col-xs-6 b-r"> <strong>ФИО</strong> <br>
+                      <div class="col-lg-3 col-xs-6 b-r"> <strong>ФИО спортсмена</strong> <br>
                         <p class="text-muted">{{user.first_name}} {{user.last_name}}</p>
                       </div>
                       <div class="col-lg-3 col-xs-6 b-r"> <strong>Телефон</strong> <br>
@@ -322,7 +323,7 @@
                   {%csrf_token%}
                   {{form.as_p}}
                         <div class="col-sm-12">
-                          <input type="submit" class="btn btn-success">
+                          <input type="submit" class="btn btn-primary">
                         </div>
                     </form>
                   </div>
