--- a/Profile/LK/static/css/style.css
+++ b/Profile/LK/static/css/style.css
@@ -434,7 +434,7 @@ color:#ccc
 position:fixed;
 }
 .main-header .logo.blue-bg {
-	background: #151515;
+	background: #292b2c;
 }
 .main-header .navbar-brand {
 	color: #fff
@@ -763,7 +763,7 @@ ul.fa-ul{
 	padding-top: 60px;
 	min-height: 100%;
 	width: 230px;
-	background: #151515;
+	background: #292b2c;
 	z-index: 810;
 	-webkit-transition: -webkit-transform .3s ease-in-out, width .3s ease-in-out;
 	-moz-transition: -moz-transform .3s ease-in-out, width .3s ease-in-out;
@@ -950,7 +950,7 @@ ul.list-inline li {
 .sidebar-mini.sidebar-collapse .sidebar-menu>li>.treeview-menu {
 	padding-top: 5px;
 	padding-bottom: 5px;
-	background: #1a2028;
+	background: #292b2c;
 }
 .sidebar-mini.sidebar-collapse .main-sidebar .user-panel>.info, .sidebar-mini.sidebar-collapse .sidebar-form, .sidebar-mini.sidebar-collapse .sidebar-menu>li>a>span, .sidebar-mini.sidebar-collapse .sidebar-menu>li>.treeview-menu, .sidebar-mini.sidebar-collapse .sidebar-menu>li>a>.pull-right, .sidebar-mini.sidebar-collapse .sidebar-menu li.header {
 	display: none !important;
@@ -3902,7 +3902,7 @@ table.text-center, table.text-center td, table.text-center th {
 	color: #80878f;
 }
 .treeview-menu>li>a:hover, .treeview-menu>li.active a {
-	color: #008cd3;
+	color: #f57b13;
 }
 .treeview-menu>li>a>.fa, .treeview-menu>li>a>.glyphicon, .treeview-menu>li>a>.ion {
 	width: 20px
