--- a/Profile/templates/inc/_nav.html
+++ b/Profile/templates/inc/_nav.html
@@ -34,7 +34,7 @@
          {%if user.avatar %}
               <img class="img-circle" src="{{user.avatar.url}}" alt="User profile picture">
               {%else%}
-              <img class="img-circle" src="https://shvsm-penza.ru/wp-content/uploads/2020/11/maxresdefault-1.jpg" alt="User profile picture">
+              <img class="img-circle" src="{{MEDIA_URL}}/ava_default.jpg" alt="User profile picture">
               {%endif%}
 
        </div>
@@ -48,9 +48,6 @@
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
         <li> <a href="{%url 'profile'%}"> <i class="fa fa-user-o"></i> <span>Профиль</span></a></li>
-        {%comment%}
-        <li> <a href="#"> <i class="fa fa-bullseye"></i> <span>Посещаемость</span> </a></li>
-        {%endcomment%}
         <li class="treeview"> <a href="#"> <i class="fa fa-envelope-o "></i> <span>Заказы</span>
         <span class="pull-right-container">
           <i class="fa fa-angle-left pull-right">
@@ -67,6 +64,12 @@
           </ul>
         </li>
         <li> <a href="{%url 'news'%}"> <i class="fa fa-briefcase"></i> <span>Новости</span> </a></li>
+        <li> <a href="{%url 'statistic'%}"> <i class="fa fa-calendar"></i> <span>Посещаемость</span> </a></li>
+        {%if user.job == 'Тренер'%}
+        <li class="header">Администрирование</li>
+        <li> <a href="{%url 'news'%}"> <i class="fa fa-briefcase"></i> <span>Новости</span> </a></li>
+
+        {%endif%}
         <li> <a href="{%url 'logout'%}"> <i class="fa fa-sign-out"></i> <span>Выйти</span> </a></li>
       </ul>
     </div>
