--- a/Profile/templates/registration/login.html
+++ b/Profile/templates/registration/login.html
@@ -24,7 +24,12 @@
 <link rel="stylesheet" href="{%static 'css/font-awesome/css/font-awesome.min.css'%}">
 <link rel="stylesheet" href="{%static 'css/et-line-font/et-line-font.css'%}">
 <link rel="stylesheet" href="{%static 'css/themify-icons/themify-icons.css'%}">
-
+<style>
+  .login-page, .register-page{
+  background: url({{MEDIA_URL}}/backgrounds/zheltyi-seryi-linii.jpg) no-repeat center center;
+   background-size: cover;
+   }
+</style>
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
