--- a/Profile/templates/registration.html
+++ b/Profile/templates/registration.html
@@ -30,8 +30,15 @@
 <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+
 <![endif]-->
 </head>
+<style>
+  .login-page, .register-page{
+  background: url({{MEDIA_URL}}/backgrounds/zheltyi-seryi-linii.jpg) no-repeat center center;
+   background-size: cover;
+   }
+</style>
 <body class="hold-transition login-page">
 <div class="login-box">
   <div class="login-box-body">
@@ -59,6 +66,10 @@
       <div class="form-group has-feedback">
         {{form.bd}}
         {{form.bd.errors}}
+      </div>
+      <div class="form-group has-feedback">
+        {{form.city}}
+        {{form.city.errors}}
       </div>
       <div class="form-group has-feedback">
         {{form.first_name_m}}
