Список спортсменов, форма редактирования данных спортсменов, список групп, добавление новых групп(доработать)

--- a/Profile/LK/templates/lk/create_group.html
+++ b/Profile/LK/templates/lk/create_group.html
@@ -1,6 +1,6 @@
 {%extends 'base.html'%}
 {%block title%}
-Создать новость
+Создать группу
 {%endblock%}
 {%block content%}
     <div class="content">
