--- a/Profile/LK/templates/lk/view_news.html
+++ b/Profile/LK/templates/lk/view_news.html
@@ -13,7 +13,7 @@
     <div class="card">
         <div class="text-center">
         {%if item.photo%}
-        <img src="{{item.photo.url}}" class="card-img-top">
+        <img src="{{item.photo.url}}" class="card-img-top img-responsive">
         {%else%}
         <img src="https://shvsm-penza.ru/wp-content/uploads/2020/11/maxresdefault-1.jpg" class="card-img-top" alt="..."
         style="max-height:80%; max-width:100%;">
