--- a/Profile/LK/templates/lk/sportsmen.html
+++ b/Profile/LK/templates/lk/sportsmen.html
@@ -11,24 +11,25 @@
       <div class="info-box">
         <h4 class="text-black">Спортсмены</h4>
         <div class="table-responsive">
+
           <table class="table">
             <thead>
               <tr>
-                <th scope="col">Имя</th>
-                <th scope="col">Фамилия</th>
+                <th scope="col">ФИО</th>
+                <th scope="col">Логин</th>
                 <th scope="col">Филиал</th>
                 <th scope="col">Группа</th>
-                <th scope="col">Логин</th>
               </tr>
             </thead>
             <tbody>
             {%for sportsmen in sportsmen%}
               <tr>
-                <td>{{sportsmen.first_name}}</td>
-                <td>{{sportsmen.last_name}}</td>
-                <td>{{form.filial}}</td>
-                <td>{{form.group}}</td>
+                <td>{{sportsmen.first_name}} {{sportsmen.last_name}}</td>
                 <td>{{sportsmen.username}}</td>
+                <td>{{sportsmen.filial}}</td>
+                <td>{{sportsmen.group}}</td>
+
+                <td><a href="{%url 'sportsmen_update' pk=sportsmen.id%}"> Изменить</a></td>
               </tr>
             {%endfor%}
             </tbody>
