--- a/Profile/templates/dop_registration.html
+++ b/Profile/templates/dop_registration.html
@@ -47,52 +47,44 @@
     </div>
     <form method="post">
         {%csrf_token%}
-
-      <div class="form-group has-feedback">
-        {{form.username}}
-        {{form.username.errors}}
-      </div>
-      <div class="form-group has-feedback">
-        {{form.email}}
-        {{form.email.errors}}
-      </div>
-      <div class="form-group has-feedback">
-        {{form.first_name}}
-        {{form.first_name.errors}}
-      </div>
-      <div class="form-group has-feedback">
-        {{form.last_name}}
-        {{form.last_name.errors}}
-      </div>
-      <div class="form-group has-feedback">
-        {{form.bd}}
-        {{form.bd.errors}}
-      </div>
-      <div class="form-group has-feedback">
-        {{form.city}}
-        {{form.city.errors}}
-      </div>
-            <div class="form-group has-feedback">
-        {{form.first_name_m}}
-        {{form.city.errors}}
-      </div>
-            <div class="form-group has-feedback">
-        {{form.last_name_m}}
-        {{form.city.errors}}
-      </div>
-      <div class="form-group has-feedback">
-        {{form.phone}}
-        {{form.phone.errors}}
-      </div>
-      <div class="form-group has-feedback">
-        {{form.password1}}
-        {{form.password1.errors}}
-      </div>
-      <div class="form-group has-feedback">
-        {{form.password2}}
-        {{form.password2.errors}}
-      </div>
-      <div>
+          {{form.as_p}}
+<!--      <div class="form-group has-feedback">-->
+<!--        {{form.username}}-->
+<!--        {{form.username.errors}}-->
+<!--      </div>-->
+<!--      <div class="form-group has-feedback">-->
+<!--        {{form.email}}-->
+<!--        {{form.email.errors}}-->
+<!--      </div>-->
+<!--      <div class="form-group has-feedback">-->
+<!--        {{form.first_name}}-->
+<!--        {{form.first_name.errors}}-->
+<!--      </div>-->
+<!--      <div class="form-group has-feedback">-->
+<!--        {{form.last_name}}-->
+<!--        {{form.last_name.errors}}-->
+<!--      </div>-->
+<!--      <div class="form-group has-feedback">-->
+<!--        {{form.bd}}-->
+<!--        {{form.bd.errors}}-->
+<!--      </div>-->
+<!--      <div class="form-group has-feedback">-->
+<!--        {{form.city}}-->
+<!--        {{form.city.errors}}-->
+<!--      </div>-->
+<!--      <div class="form-group has-feedback">-->
+<!--        {{form.phone}}-->
+<!--        {{form.phone.errors}}-->
+<!--      </div>-->
+<!--      <div class="form-group has-feedback">-->
+<!--        {{form.password1}}-->
+<!--        {{form.password1.errors}}-->
+<!--      </div>-->
+<!--      <div class="form-group has-feedback">-->
+<!--        {{form.password2}}-->
+<!--        {{form.password2.errors}}-->
+<!--      </div>-->
+<!--      <div>-->
         <!-- /.col -->
         <div class="col-xs-4 m-t-1">
           <button type="submit" class="btn btn-primary btn-block btn-flat">Зарегистрироваться</button>
