--- a/Profile/templates/inc/_nav.html
+++ b/Profile/templates/inc/_nav.html
@@ -68,9 +68,9 @@
         <li> <a href="{%url 'statistic'%}"> <i class="fa fa-calendar"></i> <span>Посещаемость</span> </a></li>
         {%elif request.user.job == 'Тренер'%}
         <li class="header">Администрирование</li>
-        <li> <a href="{%url 'groups'%}"> <i class="fa fa-briefcase"></i> <span>Филиал</span> </a></li>
+        <li> <a href="{%url 'groups'%}"> <i class="fa fa-briefcase"></i> <span>Группы</span> </a></li>
         <li> <a href="{%url 'sportsmen'%}"> <i class="fa fa-briefcase"></i> <span>Список спортсменов</span> </a></li>
-        <li> <a href="{%url 'news'%}"> <i class="fa fa-briefcase"></i> <span>Посещаемость</span> </a></li>
+        <li> <a href="{%url 'statistic_admin'%}"> <i class="fa fa-briefcase"></i> <span>Посещаемость</span> </a></li>
         {%endif%}
         <li> <a href="{%url 'logout'%}"> <i class="fa fa-sign-out"></i> <span>Выйти</span> </a></li>
       </ul>
