--- a/Profile/LK/templates/lk/profile.html
+++ b/Profile/LK/templates/lk/profile.html
@@ -32,9 +32,9 @@
                 {%endif%}
               <hr>
               <strong><i class="fa fa-map-marker margin-r-5"></i> Филиал</strong>
-                {%for obj in filial%}
-              <p class="text-muted">{{obj.title}}</p>
-                {%endfor%}
+
+              <p class="text-muted">{{user.filial}}</p>
+
               <hr>
               <strong><i class="fa fa-envelope margin-r-5"></i> Email</strong>
               <p class="text-muted">{{user.email}}</p>
@@ -86,8 +86,8 @@
                   <h3 class="m-t-3">Пояс</h3>
                   <hr>
                   <div>
-                    {%for obj in cert%}
-                    {%if obj.belt == "1 дан"%}
+
+                    {%if cert.belt == "1 дан"%}
                     <div class="progress-bar " role="progressbar" aria-valuenow="100" aria-valuemin="0"
                        aria-valuemax="100" style="width:100%; height:20px; background:gold;">
                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="50"
@@ -96,7 +96,7 @@
                         </div>
                     </div>
                       <hr>
-                    {%elif obj.belt == "2 дан"%}
+                    {%elif cert.belt == "2 дан"%}
                     <div class="progress-bar " role="progressbar" aria-valuenow="100" aria-valuemin="0"
                        aria-valuemax="100" style="width:100%; height:20px; background:gold;">
                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="50"
@@ -105,7 +105,7 @@
                         </div>
                     </div>
                       <hr>
-                    {%elif obj.belt == "3 дан"%}
+                    {%elif cert.belt == "3 дан"%}
                     <div class="progress-bar " role="progressbar" aria-valuenow="100" aria-valuemin="0"
                        aria-valuemax="100" style="width:100%; height:20px; background:gold;">
                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="50"
@@ -114,7 +114,7 @@
                         </div>
                     </div>
                       <hr>
-                    {%elif obj.belt == "4 дан"%}
+                    {%elif cert.belt == "4 дан"%}
                     <div class="progress-bar " role="progressbar" aria-valuenow="100" aria-valuemin="0"
                        aria-valuemax="100" style="width:100%; height:20px; background:gold;">
                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="50"
@@ -122,7 +122,7 @@
                          <p class="text-center font-weight-bold">IV</p>
                         </div>
                         <hr>
-                    </div>{%elif obj.belt == "5 дан"%}
+                    </div>{%elif cert.belt == "5 дан"%}
                     <div class="progress-bar " role="progressbar" aria-valuenow="100" aria-valuemin="0"
                        aria-valuemax="100" style="width:100%; height:20px; background:gold;">
                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="50"
@@ -130,7 +130,7 @@
                          <p class="text-center font-weight-bold">V</p>
                         </div>
                         <hr>
-                    </div>{%elif obj.belt == "6 дан"%}
+                    </div>{%elif cert.belt == "6 дан"%}
                     <div class="progress-bar " role="progressbar" aria-valuenow="100" aria-valuemin="0"
                        aria-valuemax="100" style="width:100%; height:20px; background:gold;">
                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="50"
@@ -138,7 +138,7 @@
                          <p class="text-center font-weight-bold">VI</p>
                         </div>
                         <hr>
-                    </div>{%elif obj.belt == "7 дан"%}
+                    </div>{%elif cert.belt == "7 дан"%}
                     <div class="progress-bar " role="progressbar" aria-valuenow="100" aria-valuemin="0"
                        aria-valuemax="100" style="width:100%; height:20px; background:gold;">
                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="50"
@@ -146,7 +146,7 @@
                          <p class="text-center font-weight-bold">VII</p>
                         </div>
                         <hr>
-                    </div>{%elif obj.belt == "8 дан"%}
+                    </div>{%elif cert.belt == "8 дан"%}
                     <div class="progress-bar " role="progressbar" aria-valuenow="100" aria-valuemin="0"
                        aria-valuemax="100" style="width:100%; height:20px; background:gold;">
                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="50"
@@ -154,7 +154,7 @@
                          <p class="text-center font-weight-bold">VIII</p>
                         </div>
                         <hr>
-                    </div>{%elif obj.belt == "9 дан"%}
+                    </div>{%elif cert.belt == "9 дан"%}
                     <div class="progress-bar " role="progressbar" aria-valuenow="100" aria-valuemin="0"
                        aria-valuemax="100" style="width:100%; height:20px; background:gold;">
                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="50"
@@ -163,7 +163,7 @@
                         </div>
                     </div>
                       <hr>
-                    {%elif obj.belt == "10 гуп"%}
+                    {%elif cert.belt == "10 гуп"%}
                     <div class="progress-bar " role="progressbar" aria-valuenow="100" aria-valuemin="0"
                        aria-valuemax="100" style="width:100%; height:20px; background:LightGray;">
                     </div>
@@ -177,7 +177,7 @@
                             один из двух вариантов, с которого ученик
                             начинает свой путь.
                       </p>
-                    {%elif obj.belt == "9 гуп"%}
+                    {%elif cert.belt == "9 гуп"%}
                     <div class="progress-bar " role="progressbar" aria-valuenow="100" aria-valuemin="0"
                        aria-valuemax="100" style="width:100%; height:20px; background:gold;">
                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="50"
@@ -194,7 +194,7 @@
                             один из двух вариантов, с которого ученик
                             начинает свой путь.
                       </p>
-                    {%elif obj.belt == "8 гуп"%}
+                    {%elif cert.belt == "8 гуп"%}
                     <div class="progress-bar " role="progressbar" aria-valuenow="100" aria-valuemin="0"
                        aria-valuemax="100" style="width:100%; height:20px; background:Gold;">
                     </div>
@@ -208,7 +208,7 @@
                         будет основательно и незыблемо все
                         строение знаний, учений и навыков.
                       </p>
-                    {%elif obj.belt == "7 гуп"%}
+                    {%elif cert.belt == "7 гуп"%}
                     <div class="progress-bar " role="progressbar" aria-valuenow="100" aria-valuemin="0"
                        aria-valuemax="100" style="width:100%; height:20px; background:green;">
                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="50"
@@ -225,7 +225,7 @@
                         будет основательно и незыблемо все
                         строение знаний, учений и навыков.
                       </p>
-                    {%elif obj.belt == "6 гуп"%}
+                    {%elif cert.belt == "6 гуп"%}
                     <div class="progress-bar " role="progressbar" aria-valuenow="100" aria-valuemin="0"
                        aria-valuemax="100" style="width:100%; height:20px; background:green;">
                     </div>
@@ -236,7 +236,7 @@
                             земли и устремляющейся в небеса.  Это-
                             символ стремительного роста.
                       </p>
-                    {%elif obj.belt == "5 гуп"%}
+                    {%elif cert.belt == "5 гуп"%}
                     <div class="progress-bar " role="progressbar" aria-valuenow="100" aria-valuemin="0"
                        aria-valuemax="100" style="width:100%; height:20px; background:darkblue;">
                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="50"
@@ -250,7 +250,7 @@
                             земли и устремляющейся в небеса.  Это-
                             символ стремительного роста.
                       </p>
-                    {%elif obj.belt == "4 гуп"%}
+                    {%elif cert.belt == "4 гуп"%}
                     <div class="progress-bar " role="progressbar" aria-valuenow="100" aria-valuemin="0"
                        aria-valuemax="100" style="width:100%; height:20px; background:darkblue;">
                     </div>
@@ -260,7 +260,7 @@
                             гибкости. На этом уровне знания ученика
                         достаточно высоки, ширины и всесторонни.
                       </p>
-                    {%elif obj.belt == "3 гуп"%}
+                    {%elif cert.belt == "3 гуп"%}
                     <div class="progress-bar " role="progressbar" aria-valuenow="100" aria-valuemin="0"
                        aria-valuemax="100" style="width:100%; height:20px; background:firebrick;">
                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="50"
@@ -272,7 +272,7 @@
                             гибкости. На этом уровне знания ученика
                         достаточно высоки, ширины и всесторонни.
                       </p>
-                    {%elif obj.belt == "2 гуп"%}
+                    {%elif cert.belt == "2 гуп"%}
                     <div class="progress-bar " role="progressbar" aria-valuenow="100" aria-valuemin="0"
                        aria-valuemax="100" style="width:100%; height:20px; background:firebrick;">
                     </div>
@@ -290,7 +290,7 @@
                             самоконтроль и проявление волевых
                           усилий.
                       </p>
-                    {%elif obj.belt == "1 гуп"%}
+                    {%elif cert.belt == "1 гуп"%}
                     <div class="progress-bar " role="progressbar" aria-valuenow="100" aria-valuemin="0"
                        aria-valuemax="100" style="width:100%; height:20px; background:black;">
                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="50"
@@ -312,10 +312,19 @@
                           усилий.
                       </p>
                     {%endif%}
-                    {%endfor%}
+
                   </div>
                   </div>
                 </div>
+                 <div class="tab-pane" id="settings" role="tabpanel">
+                  <form method="post" enctype="multipart/form-data">
+                  {%csrf_token%}
+                  {{form.as_p}}
+                        <div class="col-sm-12">
+                          <input type="submit" class="btn btn-primary">
+                        </div>
+                    </form>
+                  </div>
                 </div>
               </div>
             </div>
