--- a/Profile/LK/templates/lk/profile.html
+++ b/Profile/LK/templates/lk/profile.html
@@ -54,6 +54,7 @@
               <ul class="nav nav-tabs profile-tab" role="tablist">
                 <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#profile" role="tab" aria-expanded="true">Профиль</a> </li>
                 <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#settings" role="tab">Настройки</a> </li>
+                  <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#password" role="tab">Сменить пароль</a> </li>
               </ul>
               <!-- Tab panes -->
               <div class="tab-content">
@@ -316,10 +317,24 @@
                   </div>
                   </div>
                 </div>
-                 <div class="tab-pane" id="settings" role="tabpanel">
-                  <form method="post" enctype="multipart/form-data">
+                  <div class="tab-pane" id="settings" role="tabpanel">
+                  <form method="post" enctype="multipart/form-data" id="edit_form">
                   {%csrf_token%}
+                      <input type="hidden" name="form_type" value="edit_form">
                   {{form.as_p}}
+                        <div class="col-sm-12">
+                          <input type="submit" class="btn btn-primary">
+                        </div>
+                    </form>
+                  </div>
+                  <div class="tab-pane" id="password" role="tabpanel">
+                  <form method="post" id="pass_form">
+                  {%csrf_token%}
+                      <input type="hidden" name="form_type" value="pass_form">
+                      {%for field in password_form%}
+                      <p>{{field.label}}</p>
+                      <p>{{field}}</p>
+                      {%endfor%}
                         <div class="col-sm-12">
                           <input type="submit" class="btn btn-primary">
                         </div>
