--- a/Profile/LK/templates/lk/settings.html
+++ b/Profile/LK/templates/lk/settings.html
@@ -52,8 +52,8 @@
             <div class="card tab-style1">
               <!-- Nav tabs -->
               <ul class="nav nav-tabs profile-tab" role="tablist">
-                <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="{%url 'profile'%}" role="tab" aria-expanded="true">Профиль</a> </li>
-                <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#settings" role="tab">Настройки</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="{%url 'profile'%}" role="tab">Профиль</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="#settings" role="tab">Настройки</a> </li>
               </ul>
               <!-- Tab panes -->
               <div class="tab-content">
