--- a/Profile/LK/templates/lk/sportsmen_group.html
+++ b/Profile/LK/templates/lk/sportsmen_group.html
@@ -10,7 +10,7 @@
 <div class="content">
    <ul class="nav nav-tabs customtab2" role="tablist">
      <li class="nav-item">
-        <a class="nav-link active"  role="tab" href="{%url 'sportsmen'%}">Группа не указана</a>
+        <a class="nav-link "  role="tab" href="{%url 'sportsmen'%}">Группа не указана</a>
       </li>
       {%for group in groups%}
       <li class="nav-item">
@@ -48,5 +48,10 @@
       </div>
 </div>
 </div>
-
+<script type="text/javascript">
+  $(document).ready(function(){
+    var link = window.location.pathname;
+    $('.customtab2 li a[href="'+link+'"]').addClass('active');
+  });
+</script>
     {%endblock%}
