--- a/Profile/LK/templates/lk/sportsmen_group.html
+++ b/Profile/LK/templates/lk/sportsmen_group.html
@@ -10,7 +10,7 @@
 <div class="content">
    <ul class="nav nav-tabs customtab2" role="tablist">
      <li class="nav-item">
-        <a class="nav-link "  role="tab" href="{%url 'sportsmen'%}">Группа не указана</a>
+        <a class="nav-link "  role="tab" href="{%url 'sportsmen'%}">Новые пользователи</a>
       </li>
       {%for group in groups%}
       <li class="nav-item">
